Images and details updated

--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -106,30 +106,30 @@
 
                 <div>
                     <ul>
-                        <li>Action Research.</li>
-                        <li>Benchmarking.</li>
-                        <li>Case Study.</li>
-                        <li>Case Survey.</li>
-                        <li>Data Science.</li>
-                        <li>Engineering Research (aka design as research, design science).</li>
-                        <li>Experiment with human participants.</li>
-                        <li>Grounded Theory.</li>
-                        <li>Longitudinal Study.</li>
-                        <li>Meta-science.</li>
+                        <li>Action Research</li>
+                        <li>Benchmarking</li>
+                        <li>Case Study</li>
+                        <li>Case Survey</li>
+                        <li>Data Science</li>
+                        <li>Engineering Research (aka design as research, design science)</li>
+                        <li>Experiment with human participants</li>
+                        <li>Grounded Theory</li>
+                        <li>Longitudinal Study</li>
+                        <li>Meta-science</li>
                       </ul>
                 </div>
     
                 <div>
                     <ul>
-                        <li>Mixed Methods (also select methods that were mixed).</li>
-                        <li>Optimization Studies.</li>
-                        <li>Qualitative Survey (i.e., interview study).</li>
-                        <li>Quantitative Simulation.</li>
-                        <li>Questionnaire Survey (quantitative).</li>
-                        <li>Repository Mining.</li>
-                        <li>Systematic Literature Review.</li>
-                        <li>Mixed methods and multi-methodology.</li>
-                        <li>Replication studies.</li>
+                        <li>Mixed Methods (also select methods that were mixed)</li>
+                        <li>Optimization Studies</li>
+                        <li>Qualitative Survey (i.e., interview study)</li>
+                        <li>Quantitative Simulation</li>
+                        <li>Questionnaire Survey (quantitative)</li>
+                        <li>Repository Mining</li>
+                        <li>Systematic Literature Review</li>
+                        <li>Mixed methods and multi-methodology</li>
+                        <li>Replication studies</li>
                     </ul>
                 </div>
             </div>
@@ -139,7 +139,7 @@
             <div class="grey" data-aos="fade-right" data-aos-delay="400" data-aos-duration="500">
                 <h3>How to submit </h3>
                 <p> All papers must be submitted in PDF format through EasyChair. The page limit is set to 10 for full papers and 5 for short papers, including all figures, tables, references, and
-                    appendices. All submissions must use the official <a href="https://www.acm.org/publications/proceedings-template">PrimaryArticle Template</a>. Deviating from the ACM formatting instructions
+                    appendices. All submissions must use the official <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>. Deviating from the ACM formatting instructions
                     may lead to a desk rejection. </p>
                 <p> Authors must comply with the <a href="https://github.com/acmsigsoft/open-science-policies/blob/master/sigsoft-open-science-policies.md">SIGSOFT Open Science Policy</a>,
                      (i.e., to archive data and artifacts in a permanent repository—e.g., Zenodo, not GitHub—to 
@@ -151,7 +151,7 @@
                     and Falsification.</a> Papers submitted must not be published or under review elsewhere. The Program Chairs may use plagiarism detection software under contract to the ACM. If the research
                     involves human participants/subjects, the authors must adhere to the <a href="https://www.acm.org/publications/policies/research-involving-human-participants-and-subjects">
                         ACM Publications Policy on Research Involving Human Participants and Subjects</a>.</p>
-                <h4> Link for the submission: ??? </h4>
+                <!--<h4> Link for the submission: ??? </h4>-->
             </div>
         </div>
 
