--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 d-flex flex-column justify-content-center align-items-center">
-                    <div><img src="assets/img/secute-logo.png" class="img-fluid col-lg-3 rounded mx-auto d-block"
+                    <div><img src="assets/img/secute-logo.png" class="img-fluid col-lg-4 rounded mx-auto d-block"
                               data-aos="zoom-out" data-aos-delay="2000" data-aos-duration="1000" alt="logo"></div>
                     <h1 data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000">SECUTE 2024</h1>
                     <h2 style="margin-bottom: 6%" data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">The 1st Workshop on Security Testing for Complex Software Systems</h2>
@@ -88,14 +88,18 @@
         <div class="container">
             <div class="row about-container">
                 <h2 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Motivation </h2>
-                <p data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> La <b style="color: rgb(48, 86, 175)">burrata</b> è un formaggio fresco, di latte vaccino, a pasta filata, tipico delle Murge, in Puglia. È a forma di sacca tondeggiante
-                    con la caratteristica chiusura apicale e dall'aspetto esterno simile alla mozzarella. L'interno, simile alla manteca, è morbido e
-                    filamentoso. La burrata è frutto dell'arte casearia pugliese, in particolare di quella di Andria. Si narra che la burrata di Andria
-                    fu inventata in un’antica masseria nei primi decenni del XX secolo dai fratelli Vincenzo e Lorenzo Bianchino. A causa di una forte
-                    nevicata, non potendo trasferire il latte in città, avrebbero avuto la necessità di trasformarlo e soprattutto di utilizzare la panna
-                    o crema che affiorava naturalmente. Così, seguendo il concetto di produzione delle mantéche (involucri di pasta filata stagionata in
-                    cui è conservato il burro), i Bianchino provarono a realizzare con lo stesso principio un prodotto fresco:[1] pensarono di mescolare
-                    i residui della lavorazione della pasta filata con della panna ed avvolgere il tutto in un involucro fatto anch'esso di pasta filata. </p>
+                <p data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> In the past two decades, the complexity of modern IT systems has
+                    surged due to technologies like AI, cloud computing, and microservices. Ensuring security in these systems is challenging. Software security is critical for practitioners
+                    to prevent incidents such as data breaches.</br>
+
+                    As complex systems evolve, robust methods to test their security become imperative. Many testing techniques exist, including model-based and code-based security
+                    testing, penetration testing, and security regression testing. Despite these methods, some vulnerabilities are still inadequately tested. Current solutions mainly
+                    focus on traditional systems, leaving unconventional architectures like Virtual Reality or IoT systems largely unaddressed. Further research is essential to develop
+                    standardized techniques for both traditional and complex domains.</br>
+
+                    To address these gaps, <b style="color: rgb(48, 86, 175)">SECUTE is a workshop focusing on empirical methods for testing the security of complex software systems</b> to understand the support they provide
+                    to practitioners in dealing with security, particularly in unconventional domains. SECUTE aims to foster a community for sharing ideas and initiating collaborations
+                    among researchers in this field. </p>
             </div>
             <div class="row about-container">
                 <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Where and When? </h3>
@@ -136,7 +140,7 @@
 
             <div id="twitter">
                 <h2> Twitter </h2>
-                <a class="twitter-timeline" data-tweet-limit="2" href="https://twitter.com/EmanueleIannon3">Tweets by SECUTE2024</a>
+                <a class="twitter-timeline" data-tweet-limit="2" href="https://twitter.com/SECUTEWorkshop">Tweets by SECUTE Workshop</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
