--- a/committee.html
+++ b/committee.html
@@ -82,20 +82,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="100"  data-aos-duration="800">
                         <div class="member">
                         <div class="member-img">
-                            <img src="assets/img/valeria.jpeg" class="img-fluid" alt="">
-                        </div>
-                        <div class="member-info">
-                            <h5><a href="https://valeriapontillo.github.io/" target="_blank">Valeria Pontillo</a></h5>
-                            <span>Vrije Universiteit Brussel</span>
-                            <span>Bruxelles, Belgium</span>
-                        </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="200"  data-aos-duration="800">
-                        <div class="member">
-                        <div class="member-img">
-                            <img src="assets/img/valeria.jpeg" class="img-fluid" alt="">
+                            <img src="assets/img/emanuele.png" class="img-fluid" alt="">
                         </div>
                         <div class="member-info">
                             <h5><a href="https://emaiannone.github.io/" target="_blank">Emanuele Iannone</a></h5>
@@ -105,28 +92,41 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="200"  data-aos-duration="800">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/valeria.png" class="img-fluid" alt="">
+                            </div>
+                            <div class="member-info">
+                                <h5><a href="https://valeriapontillo.github.io/" target="_blank">Valeria Pontillo</a></h5>
+                                <span>Vrije Universiteit Brussel</span>
+                                <span>Bruxelles, Belgium</span>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="300"  data-aos-duration="800">
                         <div class="member">
-                        <div class="member-img">
-                            <img src="assets/img/valeria.jpeg" class="img-fluid" alt="">
-                        </div>
-                        <div class="member-info">
-                            <h5><a href="https://soft.vub.ac.be/~cderoove/" target="_blank">Coen De Roover</a></h5>
-                            <span>Vrije Universiteit Brussel</span>
-                            <span>Bruxelles, Belgium</span>
-                        </div>
+                            <div class="member-img">
+                                <img src="assets/img/riccardo.png" class="img-fluid" alt="">
+                            </div>
+                            <div class="member-info">
+                                <h5><a href="https://scandariato.org/" target="_blank">Riccardo Scandariato</a></h5>
+                                <span>Hamburg University of Technology</span>
+                                <span>Hamburg, Germany</span>
+                            </div>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="400"  data-aos-duration="800">
                         <div class="member">
                         <div class="member-img">
-                            <img src="assets/img/valeria.jpeg" class="img-fluid" alt="">
+                            <img src="assets/img/coen.png" class="img-fluid" alt="">
                         </div>
                         <div class="member-info">
-                            <h5><a href="https://scandariato.org/" target="_blank">Riccardo Scandariato</a></h5>
-                            <span>Hamburg University of Technology</span>
-                            <span>Hamburg, Germany</span>
+                            <h5><a href="https://soft.vub.ac.be/~cderoove/" target="_blank">Coen De Roover</a></h5>
+                            <span>Vrije Universiteit Brussel</span>
+                            <span>Bruxelles, Belgium</span>
                         </div>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/sbonk.webp" class="img-fluid" alt="">
+                                <img src="assets/img/viviana.png" class="img-fluid" alt="">
                             </div>
                             <div class="member-info">
                                 <h5><a href="https://vipenti.github.io/" target="_blank">Viviana Pentangelo</a></h5>
@@ -154,13 +154,14 @@
         </div>
         
         <div class="row class-container white" id="program_committee" style="margin-top:3%">
-            <h3> Program Chair </h3>
-            <div style="margin: 1%;">
+            <h3> Program Committee </h3>
+            <!--<div style="margin: 1%;">
                 <ul data-aos="fade-right" data-aos-delay="300" data-aos-duration="800">
                     <li> <strong> Dario Di Dario</strong>, University of Salerno, Italy </li>
                     <li> <strong> Ruben Opdebeeck</strong>, Vrije Universiteit Brussel, Belgium </li>
                     <li> <strong> Quang Cuong Bui</strong>, Hamburg University of Technology, Germany </li>
-                </ul>
+                </ul>-->
+            <p> <i>TBD</i> </p>
             </div>
         </div>
     </div>
