Committee style fix

--- a/committee.html
+++ b/committee.html
@@ -156,20 +156,20 @@
         <div class="row class-container white" id="program_committee" style="margin-top:3%">
             <h3> Program Committee </h3>
             <div style="margin: 1%;">
-                <ul>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="800"> <strong> Dario Di Dario</strong>, University of Salerno, Italy </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="850"> <strong> Ruben Opdebeeck</strong>, Vrije Universiteit Brussel, Belgium </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="900"> <strong> Quang Cuong Bui</strong>, Hamburg University of Technology, Germany </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="950"> <strong> Antonino Sabetta</strong>, SAP Security Research, France </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000"> <strong> Péter Hegedűs</strong>, University of Szeged, Hungary </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="1050"> <strong> Ranindya Paramitha</strong>, University of Trento, Italy </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="1100"> <strong> Ahmed Zerouali</strong>, Vrije Universiteit Brussel, Belgium </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="1150"> <strong> Mariano Ceccato</strong>, University of Verona, Italy </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="1200"> <strong> Michael Felderer</strong>, German Aerospace Center, Cologne </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="1250"> <strong> Maura Pintor</strong>, University of Cagliari, Italy </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="1300"> <strong> Jordan Samhi</strong>, CISPA, Germany </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="1350"> <strong> Martin Johns</strong>, Technical University of Braunschweig, Germany </li>
-                    <li data-aos="fade-right" data-aos-delay="300" data-aos-duration="1400"> <strong> Quentin Stievenart</strong>, Université du Québec, Canada </li>
+                <ul data-aos="fade-right" data-aos-delay="300" data-aos-duration="800">
+                    <li> <strong> Dario Di Dario</strong>, University of Salerno, Italy </li>
+                    <li> <strong> Ruben Opdebeeck</strong>, Vrije Universiteit Brussel, Belgium </li>
+                    <li> <strong> Quang Cuong Bui</strong>, Hamburg University of Technology, Germany </li>
+                    <li> <strong> Antonino Sabetta</strong>, SAP Security Research, France </li>
+                    <li> <strong> Péter Hegedűs</strong>, University of Szeged, Hungary </li>
+                    <li> <strong> Ranindya Paramitha</strong>, University of Trento, Italy </li>
+                    <li> <strong> Ahmed Zerouali</strong>, Vrije Universiteit Brussel, Belgium </li>
+                    <li> <strong> Mariano Ceccato</strong>, University of Verona, Italy </li>
+                    <li> <strong> Michael Felderer</strong>, German Aerospace Center, Cologne </li>
+                    <li> <strong> Maura Pintor</strong>, University of Cagliari, Italy </li>
+                    <li> <strong> Jordan Samhi</strong>, CISPA, Germany </li>
+                    <li> <strong> Martin Johns</strong>, Technical University of Braunschweig, Germany </li>
+                    <li> <strong> Quentin Stievenart</strong>, Université du Québec, Canada </li>
                 </ul>
             </div>
         </div>
