Extended deadline update

--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                 <div class="section-title">
                     <div id="date-list">
                         <div class="date next-date" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
-                            <h3>March 8th, 2024</h3>
+                            <h3>March 15th, 2024
+                                <b style="font-size: 12pt; color: rgb(273, 179, 119); font-weight: 100"> DEADLINE EXTENDED!</b></h3>
+                            <h3><s style="color: #BEBEBE; font-size: 15pt;">March 8th, 2024</s></h3>
                             <p>Papers submission</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
