--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -202,7 +202,7 @@
             <div class="white" data-aos="fade-left" data-aos-delay="900" data-aos-duration="500">
                 <h3>Important dates</h3>
                 <ul>
-                    <li><strong>Papers submission:</strong> March 8th, 2024</li>
+                    <li><strong>Papers submission:</strong> <s style="color: #BEBEBE;">March 8th, 2024</s> March 15th, 2024 <b style="font-size: 12pt; color: rgb(273, 179, 119);"> DEADLINE EXTENDED!</b></li>
                     <li><strong>Papers notification:</strong> April 12th, 2024</li>
                     <li><strong>Papers camera-ready:</strong> April 26th, 2024</li>
                     <li><strong>Early registration deadline:</strong> May 5th, 2024</li>
