Supporting Project banner

--- a/index.html
+++ b/index.html
@@ -107,8 +107,33 @@
                     will be held at Salerno, Italy, co-located with <a href="https://conf.researchr.org/home/ease-2024">EASE 2024</a>. </h4>
             </div>
         </div>
+
     </section>
     <!--------------------------------- END ABOUT --------------------------------------------------->
+
+    <!--------------------------------- SEC4AI4SEC --------------------------------------------------->
+    <section id="supporting_projects" class="d-flex align-items-center">
+        <div class="container d-flex">
+            <div class="supporting-container">
+                <h2 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Supporting Project </h2>
+                <h4 data-aos="fade-up"data-aos-delay="200" data-aos-duration="800">SECUTE has been organized in the context of the <a href="https://www.sec4ai4sec-project.eu/" target="_blank">SEC4AI4SEC</a> project.</h4>
+                <p data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> <b>SEC4AI4SEC</b> is a European project aimed at developing cutting-edge technologies, open-source tools, and new methodologies for designing
+                    and certifying secure AI-enhanced systems and AI-enhanced systems for security.</p>
+                <div class="social_container" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                    <a href="https://www.linkedin.com/company/sec4ai4sec" target="_blank"> <i class="bi bi-linkedin"></i></a>
+                    <a href="https://twitter.com/sec4ai4sec" target="_blank"> <i class="bi bi-twitter"></i></a>
+                    <a href="https://twitter.com/sec4ai4sec" target="_blank"> <i class="bi bi-globe"></i></a>
+                </div>
+            </div>
+
+            <div class="supporting-container">
+                <div id="img_container"><img src="assets/img/sec4AI4sec.png" class=""
+                     data-aos="zoom-out" data-aos-delay="200" data-aos-duration="1000" alt="sec4ai4sec"></div>
+            </div>
+        </div>
+    </section>
+    <!--------------------------------- END SEC4AI4SEC --------------------------------------------------->
+
 
     <!--------------------------------- INFOS --------------------------------------------------->
     <section id="infos" class="d-flex align-items-center">
@@ -118,13 +143,13 @@
                 <h2> Important Dates </h2>
                 <div class="section-title">
                     <div id="date-list">
-                        <div class="date next-date" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
-                            <h3>March 15th, 2024
-                                <b style="font-size: 12pt; color: rgb(273, 179, 119); font-weight: 100"> DEADLINE EXTENDED!</b></h3>
+                        <div class="date" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
+                            <h3><s style="color: #BEBEBE;">March 15th, 2024></s></h3>
+                                <!--<b style="font-size: 12pt; color: rgb(273, 179, 119); font-weight: 100"> DEADLINE EXTENDED!</b></h3>-->
                             <h3><s style="color: #BEBEBE; font-size: 15pt;">March 8th, 2024</s></h3>
                             <p>Papers submission</p>
                         </div>
-                        <div class="date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <div class="date next-date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <h3>April 12th, 2024</h3>
                             <p>Papers notification</p>
                         </div>
