--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="social_container" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                     <a href="https://www.linkedin.com/company/sec4ai4sec" target="_blank"> <i class="bi bi-linkedin"></i></a>
                     <a href="https://twitter.com/sec4ai4sec" target="_blank"> <i class="bi bi-twitter"></i></a>
-                    <a href="https://twitter.com/sec4ai4sec" target="_blank"> <i class="bi bi-globe"></i></a>
+                    <a href="https://www.sec4ai4sec-project.eu/" target="_blank"> <i class="bi bi-globe"></i></a>
                 </div>
             </div>
 
