--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!--------------------------------- SEC4AI4SEC --------------------------------------------------->
     <section id="supporting_projects" class="d-flex align-items-center">
         <div class="container d-flex">
-            <div class="supporting-container">
+            <div class="supporting-container supporting-info">
                 <h2 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Supporting Project </h2>
                 <h4 data-aos="fade-up"data-aos-delay="200" data-aos-duration="800">SECUTE has been organized in the context of the <a href="https://www.sec4ai4sec-project.eu/" target="_blank">SEC4AI4SEC</a> project.</h4>
                 <p data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> <b>SEC4AI4SEC</b> is a European project aimed at developing cutting-edge technologies, open-source tools, and new methodologies for designing
@@ -126,9 +126,11 @@
                 </div>
             </div>
 
-            <div class="supporting-container">
-                <div id="img_container"><img src="assets/img/sec4AI4sec.png" class=""
-                     data-aos="zoom-out" data-aos-delay="200" data-aos-duration="1000" alt="sec4ai4sec"></div>
+            <div class="supporting-container supporting-img">
+                <div class="img_container"><img src="assets/img/sec4AI4sec.png" class=""
+                     data-aos="zoom-out" data-aos-delay="200" data-aos-duration="1000" alt="sec4ai4sec">
+                <img style="width: 280px; height: 60px" src="assets/img/ue-logo2.png" class=""
+                     data-aos="zoom-out" data-aos-delay="200" data-aos-duration="1000" alt="ue-logo"> </div>
             </div>
         </div>
     </section>
