--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -203,7 +203,7 @@
                 <h3>Important dates</h3>
                 <ul>
                     <li><strong>Papers submission:</strong> <s style="color: #BEBEBE;">March 15th, 2024</s></li>
-                    <li><strong>Papers notification:</strong> April 12th, 2024</li>
+                    <li><strong>Papers notification:</strong> <s style="color: #BEBEBE;">April 12th, 2024</s></li>
                     <li><strong>Papers camera-ready:</strong> April 26th, 2024</li>
                     <li><strong>Early registration deadline:</strong> May 5th, 2024</li>
                   </ul>
