--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                             <h3><s style="color: #BEBEBE; font-size: 15pt;">March 8th, 2024</s></h3>
                             <p>Papers submission</p>
                         </div>
-                        <div class="date next-date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
-                            <h3>April 12th, 2024</h3>
+                        <div class="date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                            <h3><s style="color: #BEBEBE; font-size: 15pt;">April 12th, 2024</s></h3>
                             <p>Papers notification</p>
                         </div>
-                        <div class="date" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
+                        <div class="date next-date" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
                             <h3>April 26th, 2024</h3>
                             <p>Papers camera-ready</p>
                         </div>
