--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -202,9 +202,9 @@
             <div class="white" data-aos="fade-left" data-aos-delay="900" data-aos-duration="500">
                 <h3>Important dates</h3>
                 <ul>
-                    <li><strong>Papers submission:</strong> <s style="color: #BEBEBE;">March 15th, 2024</s></li>
-                    <li><strong>Papers notification:</strong> <s style="color: #BEBEBE;">April 12th, 2024</s></li>
-                    <li><strong>Papers camera-ready:</strong> April 26th, 2024</li>
+                    <li><strong>Paper submission:</strong> <s style="color: #BEBEBE;">March 15th, 2024</s></li>
+                    <li><strong>Paper notification:</strong> <s style="color: #BEBEBE;">April 12th, 2024</s></li>
+                    <li><strong>Paper camera-ready:</strong> April 26th, 2024</li>
                     <li><strong>Early registration deadline:</strong> May 5th, 2024</li>
                   </ul>
                   
