--- a/index.html
+++ b/index.html
@@ -149,15 +149,15 @@
                             <h3><s style="color: #BEBEBE;">March 15th, 2024></s></h3>
                                 <!--<b style="font-size: 12pt; color: rgb(273, 179, 119); font-weight: 100"> DEADLINE EXTENDED!</b></h3>-->
                             <h3><s style="color: #BEBEBE; font-size: 15pt;">March 8th, 2024</s></h3>
-                            <p>Papers submission</p>
+                            <p>Paper submission</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <h3><s style="color: #BEBEBE; font-size: 15pt;">April 12th, 2024</s></h3>
-                            <p>Papers notification</p>
+                            <p>Paper notification</p>
                         </div>
                         <div class="date next-date" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
                             <h3>April 26th, 2024</h3>
-                            <p>Papers camera-ready</p>
+                            <p>Paper camera-ready</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
                             <h3>May 5th, 2024</h3>
