--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
                             <h3>May 5th, 2024</h3>
                             <p>Early registration deadline</p>
                         </div>
+                        <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+                            <h3>May 5th, 2024</h3>
+                            <p>Early registration deadline</p>
+                        </div>
+                        <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+                            <h3>June 21st, 2024</h3>
+                            <p>Workshop</p>
+                        </div>
                     </div>
                 </div>
             </div>
